2001-05-25  Dave Peticolas  <dave@krondo.com>

	* src/doc/design/engine.texinfo: update docs

	* configure.in: add Norwegian to list of translations

	* AUTHORS: add credits

	* doc/sgml/C/xacc-about.sgml: add credits

2001-05-25  Christian Stimming  <stimming@tuhh.de>

	* po/no.po: Kjartan Maraas' Norwegian updated translation.

	* src/gnome/gnc-html-guppi.c (gnc_has_guppi_version): generalized
	this function for arbitrary Guppi versions. Tried to enable
	barchart axis-labels for CVS Guppi but this gives nothing but
	segfaults. Shit.

2001-05-25  Dave Peticolas  <dave@krondo.com>

	* src/scm/report/account-summary.scm: fix bug

	* src/gnome/window-main.c: add close window button to toolbar

	* doc/sgml/C/xacc-about.sgml: fix warnings

	* doc/sgml/C/xacc-quickstart.sgml: fix warnings

2001-05-24  Dave Peticolas  <dave@krondo.com>

	* doc/sgml/C/xacc-features.sgml: fix docs

	* doc/sgml/C/xacc-account-summary.sgml: fix spelling

	* src/gnome/new-user-funs.c (gnc_ui_show_new_user_choice_window):
	jump to new user quickstart help when appropriate

	* src/gnc-ui.h: add new help file

2001-05-25  Robert Graham Merkel  <rgmerk@mira.net>
	
	* src/scm/report/average-balance.scm: catch all-zero-data
	case, display warning message rather than let the graphing
	code catch it.

	* src/scm/html-utilities.scm: display report title
	string in gnc:html-no-account-warning and
	gnc:html-make-empty-data-warning.  API changed.

	* src/scm/report/*.scm: update to use changed
	functions described above.

	* src/scm/tip-list.scm: fix spelling mistake.

2001-05-24  Christian Stimming  <stimming@tuhh.de>

	* po/gnc-glossary.txt: added file for all our translators.

	* src/scm/report/average-balance.scm: made strings more
	consistent.

	* src/scm/options-utilities.scm: adjusted the upper bound for plot
	size.

	* src/gnome/dialog-column-view.c: use menu-name in report-list.

	* src/scm/report.scm (gnc:report-menu-name),
	(gnc:report-template-menu-name/name): added functions.
